src/components/Modal.css
* {
  font-family: "Poppins", sans-serif;
}

.material-symbols-rounded {
  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
  transition: transform 0.3s ease-in-out; /* Smooth hover animation */
  cursor: pointer;
  color: #FFCB59;
}

  /* Modal Overlay */
  .modal-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1000;
  }

.modal-content {
  background-color: #FFF;
  padding: 20px;
  border-radius: 8px;
  max-width: 80%;
  width: 500px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  position: relative;
  height: fit-content;
  max-height: 650px;
  animation: fadeIn 0.2s ease-in-out;
}

.modal-content h2 {
  margin-top: 0;
}

.modal-content h3 {
  margin-top: 10px;
}

.modal-content p {
  margin-top: 10px;

}

/* Lists styling */
ul {
  list-style-type: none;
  padding: 0;
}

.cart-section {
  height: 400px;
}

li {
  display: flex;
  justify-content: space-between;
  padding: 5px 0; /* Added more padding between the list items */
  vertical-align: middle;
  margin-bottom: 10px;
}

/* Buttons Styling */
button {
  transition: transform 0.3s ease-in-out;
  padding: 6px 15px;
  background-color: #FFCB59;
  color: #fff;
  border: none;
  cursor: pointer;
  font-size: 14px;
  border-radius: 5px; 
}

.DineInBtn, .DeliveryBtn, .PickupBtn, .pay-btn {
  display: inline-block;
  background-color: #FFCB59;
  margin: 0 10px 6px 0; /* Adjust margins to align buttons */
}

.DineInBtn:hover, .DeliveryBtn:hover, .PickupBtn:hover, .pay-btn:hover {
  background-color: #F2BF50;
  transition: background-color 0.2s ease-in-out;
  transform: scale(1.05);
}

.reserve-btn {
    background-color: #FFCB59;
    transition: background-color 0.2s ease-in-out;
    transform: scale(1.05);
}

.reserve-btn:hover {
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  transition: background-color 0.2s ease-in-out;
  transform: scale(1.05);
}

.reserve-checkbox {
  cursor: pointer;
}

.close-btn {
  position: absolute;
  top: 10px;
  right: 10px;
  cursor: pointer;
}

/* Book Table Styling */
.table-input, .num-ppl-input {
  margin-left: 3%;
  margin-bottom: 2%;
  cursor: pointer;
  font-size: 12px;
  border-radius: 10px;
  border: 1px solid #959595;
  background-color: white;
  padding: 5px;
}

p {
  margin-top: 0;
  color: #FFCB59;
  font-size: 13px;
}

.reservation-section h2 {
  border-top: 1px solid #959595;
  padding-top: 20px;
}

.reservation-section h2, .total-price {
  border-top: 1px solid #959595;
  padding-top: 10px;
}

.total-price h4 {
  margin-top: 10px;
  margin-bottom: 10px;
}

/* Comment section */
.comment-form {
  margin-bottom: 20px;
}

.comment-username, .comment-textarea {
  box-sizing: border-box;
  width: 100%;
  padding: 10px;
  margin-bottom: 10px;
  font-size: 1rem;
  border: 1px solid #ddd;
  border-radius: 5px;
}

.type {
  padding: 10px 20px;
  background-color: #FFCB59;
  color: white;
  border: none;
  border-radius: 5px;
  cursor: pointer;
}

.type:hover {
  background-color: #FFCB59;
}

.comments-list {
  height: 340px;
  max-height: 340px;
  overflow-y: auto;
  border-radius: 20px;
  padding: 0px 5px 0px 10px;
}

.comment-user {
  margin: 0 0 5px 0;
  font-size: 14px;
  color: black;
}

.comment-item {
  background: #fffaf7;
  padding: 10px;
  margin-bottom: 10px;
  border-radius: 5px;
}

.comment-text {
  color: black;
}

.friendly-reminder {
  display: flex;
  vertical-align: middle;  
  gap: 8px;
  font-size: 15px;
}

